--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crawler": "^1.0.5",
     "elasticsearch": "^13.0.1",
     "md5": "^2.2.1",
+    "restify": "^4.3.0",
     "unique-string": "^1.0.0"
   }
 }
