--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ingatlan-crawler",
+  "name": "realestate-crawler",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,9 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "crawler": "^1.0.5",
-    "elasticsearch": "^13.0.1",
     "md5": "^2.2.1",
-    "restify": "^4.3.0",
     "unique-string": "^1.0.0"
   }
 }
